Fixed position and display problems, ensures scaling is disbaled and fixed iPad layout issues

--- a/ios.css
+++ b/ios.css
@@ -1,11 +1,15 @@
 #topbar {
     padding-top: 12px;
-    height: 14.5%;
+    padding-bottom: 10px;
+    /*height: 14.5%;*/
     width: 100%;
     background-color: #0f6a63;
-    position: absolute;
-    bottom: 85.5%;
-    display: inline;
+    position: block;
+    /*bottom: 85.5%;*/
+    display: inline-block;
+    margin-bottom: 12px;
+    top: -8px;
+    border-bottom: 3px solid black;
 }
 #topbar #statusBar p{
     display: inline;
@@ -107,10 +111,11 @@ label[for="key_txtinp"] {
 #overlay {
     background-color: gray;
     width: 100%;
-    height: 110%;
-    position: fixed;
+    height: 101%;
+    position: absolute;
     z-index: 4000;
     opacity: 0.75;
     display: none;
-    bottom: 0px;
+    /*bottom: 0px;*/
+    top: -8px;
 }
